# expo-spatial-layer-app

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  app.json  convert_csv.py  package-lock.json  package.json
app/: spatial-test.tsx
app/(tabs)/: index.tsx
modules/expo-spatial-layer/: ARCHITECTURE.md  PERFORMANCE.md  README.md  expo-module.config.json  index.tsx  package.json
modules/expo-spatial-layer/android/: CMakeLists.txt  build.gradle
modules/expo-spatial-layer/android/src/main/cpp/: expo-spatial-layer.cpp
modules/expo-spatial-layer/android/src/main/java/expo/modules/spatiallayer/: ExpoSpatialLayerModule.kt  ExpoSpatialLayerView.kt  SpatialTileProvider.kt
modules/expo-spatial-layer/cpp/: Point.h  QuadTree.cpp  QuadTree.h  SpatialLayer.cpp  SpatialLayer.h
modules/expo-spatial-layer/ios/: ExpoSpatialLayer.podspec  ExpoSpatialLayerModule.swift  ExpoSpatialLayerView.swift  SpatialLayerJSIInstaller.h  SpatialLayerJSIInstaller.mm
modules/expo-spatial-layer/src/: ExpoSpatialLayer.types.ts  ExpoSpatialLayerModule.ts  ExpoSpatialLayerModule.web.ts  ExpoSpatialLayerView.tsx  ExpoSpatialLayerView.web.tsx  types.ts
